--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -2,4 +2,7 @@ pandoc: '3.4'
 pkgdown: 2.1.3
 pkgdown_sha: ~
 articles: {}
-last_built: 2025-09-10T06:20Z
+last_built: 2025-09-10T10:33Z
+urls:
+  reference: https://nthun.github.io/vazul/reference
+  article: https://nthun.github.io/vazul/articles
