--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -22,9 +22,12 @@ Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.3
 Depends: 
-    R (>= 3.5)
+    R (>= 4.1.0)
 LazyData: true
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 URL: https://nthun.github.io/vazul/
+Imports: 
+    dplyr,
+    rlang
