--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -1,12 +1,6 @@
 # Workflow derived from https://github.com/r-lib/actions/tree/v2/examples
 # Need help debugging build failures? Start at https://github.com/r-lib/actions#where-to-find-help
-on:
-  push:
-    branches: [main, master]
-  pull_request:
-
-name: test-coverage
-
+# At top level
 permissions:
   id-token: write
   contents: read
@@ -14,8 +8,6 @@ permissions:
 jobs:
   test-coverage:
     runs-on: ubuntu-latest
-    env:
-      GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
 
     steps:
       - uses: actions/checkout@v4
@@ -30,11 +22,6 @@ jobs:
 
       - name: Test coverage
         run: |
-          # Optional: debug file structure
-          # ls -la
-          # find . -path './tests/**'
-
-          # Generate coverage report
           cov <- covr::package_coverage(quiet = FALSE, clean = FALSE)
           print(cov)
           covr::to_cobertura(cov)
@@ -47,16 +34,4 @@ jobs:
           name: github-actions-ci
           fail_ci_if_error: ${{ !github.event.pull_request }}
           use_oidc: true
-
-      - name: Show testthat output
-        if: always()
-        run: |
-          find "${{ runner.temp }}/package" -name 'testthat.Rout*' -exec cat '{}' \; || true
-        shell: bash
-
-      - name: Upload test results
-        if: failure()
-        uses: actions/upload-artifact@v4
-        with:
-          name: coverage-test-failures
-          path: ${{ runner.temp }}/package
+          use_legacy_upload_endpoint: true  # Add this to avoid 500s
