--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -26,7 +26,9 @@ Depends:
 LazyData: true
 Suggests: 
     testthat,
-    covr
+    covr,
+    knitr,
+    quarto
 Config/testthat/edition: 3
 URL: https://nthun.github.io/vazul/
 Imports: 
@@ -34,3 +36,4 @@ Imports:
     rlang,
     tidyselect,
     utils
+VignetteBuilder: quarto
