--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,8 +1,9 @@
 pandoc: 3.6.3
 pkgdown: 2.1.3
 pkgdown_sha: ~
-articles: {}
-last_built: 2025-09-24T22:49Z
+articles:
+  using_mask_names: using_mask_names.html
+last_built: 2025-09-26T08:19Z
 urls:
   reference: https://nthun.github.io/vazul/reference
   article: https://nthun.github.io/vazul/articles
