--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,3 +9,4 @@ export(scramble_values)
 export(scramble_values_rowwise)
 export(scramble_variables)
 export(scramble_variables_rowwise)
+importFrom(lifecycle,deprecated)
