--- a/.github/workflows/test-coverage.yaml
+++ b/.github/workflows/test-coverage.yaml
@@ -2,7 +2,7 @@ name: test-coverage
 
 on:
   push:
-    branches: [main, master]
+    branches: [main, master, devel]
   pull_request:
   workflow_dispatch:
 
