--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,40 +1,42 @@
 Package: vazul
 Title: Package for data blinding
 Version: 0.4.0
-Authors@R: 
-    c(
+Authors@R: c(
     person(given = "Tamás", 
            family = "Nagy", 
            email = "nagytamas.hungary@gmail.com", 
-           role = c("aut", "cre")),
+           role = c("aut", "cre"),
+           comment = c(ORCID = "0000-0001-5244-0356")),
     person(given = "Alexandra", 
            family = "Sarafoglou", 
            email = "alexandra.sarafoglou@gmail.com", 
-           role = c("aut", "dtc")),
+           role = c("aut", "dtc"),
+           comment = c(ORCID = "0000-0003-0031-685X")),
     person(given = "Márton", 
            family = "Kovács", 
            email = "marton.balazs.kovacs@gmail.com", 
-           role = c("aut"))
+           role = c("aut"),
+           comment = c(ORCID = "0000-0002-8142-8492"))
            )
 Description: The vazul package provides functions for data blinding.
 License: MIT + file LICENSE
-Encoding: UTF-8
-Roxygen: list(markdown = TRUE)
-RoxygenNote: 7.3.3
+URL: https://nthun.github.io/vazul/
+BugReports: https://github.com/nthun/vazul/issues
 Depends: 
     R (>= 4.1.0)
-LazyData: true
+Imports: 
+    dplyr,
+    lifecycle,
+    rlang,
+    tidyselect
 Suggests: 
     testthat,
     covr,
     knitr,
     quarto
-Config/testthat/edition: 3
-URL: https://nthun.github.io/vazul/
-Imports: 
-    dplyr,
-    lifecycle,
-    rlang,
-    tidyselect,
-    utils
 VignetteBuilder: quarto
+Config/testthat/edition: 3
+Encoding: UTF-8
+LazyData: true
+Roxygen: list(markdown = TRUE)
+RoxygenNote: 7.3.3
