added references to the pkg description

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,6 +21,8 @@ Authors@R: c(
 Description: Provides tools for analysis blinding in confirmatory research contexts
   by masking and scrambling test-relevant aspects of data. Vector-, data frame-, and
   row-wise operations support blinding for hierarchical and repeated-measures designs.
+  For more details see MacCoun and Perlmutter (2015) <doi:10.1038/526187a> and
+  Dutilh, Sarafoglou, and Wagenmakers (2019) <doi:10.1007/s11229-019-02456-7>.
 License: MIT + file LICENSE
 URL: https://nthun.github.io/vazul/
 BugReports: https://github.com/nthun/vazul/issues
